# stalkforecast-go

./: .env  .gitignore  .gitmodules  Procfile  README.md  app.json  azure-pipelines.yaml  doc_api.go  go.mod  go.sum  main.go  main_test.go  makefile  pip-freeze.txt  setup.cfg  tools.go
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: godoc-root.html  godoc.3.html  godoc.4.html  godoc.5.html  godoc.6.html  proto.html  redoc.html
proto/: service.pb.go  service.pb.gw.go  service.proto  service.swagger.json
protogen/stalk_proto/: models.pb.go
rest/: server.go
service/: serializers.go  server.go  service_test.go  startServers.go
service/servers/: grpc.go  loadSettings.go  monitor.go  rest.go  serializers.go
zdocs/source/: conf.py  index.rst
zdocs/source/_static/: godoc-root.html  godoc.3.html  godoc.4.html  godoc.5.html  godoc.6.html  godoc.8.html  proto.html
zdocs/source/proto/: service.swagger.json
zdocs/source/stalk-proto/: service.swagger.json
zdocs/stalk-proto/: service.swagger.json
