[version]
release = 0.2.5
target = 0.2

[testing]
coverage_required = 80

[metadata]
name = stalkforecaster

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
	sphinxcontrib-redoc
build = 
	packaging
test = 

[build_sphinx]
project = stalkforecaster
copyright = '2020, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

